# gurobi-modelanalyzer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  bld.bat  build.sh  environment.yml  meta.yaml  model_analyzer-0.0.1-py_0.tar.bz2  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build-wheel.yml  doc-build.yml  publish-pypi.yml  release.yml  static.yml  test-wheels.yml  test.yml  unit-tests.yml
docs/: README.md  requirements.txt
docs/source/: advanced_usage_illcond.rst  advanced_usage_scaling.rst  apiexamples_solcheck.rst  apiref_illcond.rst  apiref_scaling.rst  apiref_solcheck.rst  bib_illcond.bib  bib_illcond.rst  bib_scaling.bib  bib_scaling.rst  cli_examples_solcheck.rst  cli_scaling.rst  conf.py  contactus.rst  howitworks_solcheck.rst  illcond.rst  index.rst  installation.rst  license.rst  quickstart_illcond.rst  quickstart_scaling.rst  quickstart_solcheck.rst  scaling.rst  solcheck.rst  tips_solcheck.rst  usage_solcheck.rst
docs/source/_templates/sidebar/: brand.html
examples/: afiroill.lp.bz2  cantilever_sublp.bas.bz2  cantilever_sublp.mps.bz2  cantilever_sublp_kappaexplain.lp.bz2  irish-electricity.mps.bz2  irish-electricity.mps_kappaexplain.lp.bz2  neos-1603965rel.mps.bz2  neos-1603965rel_kappaexplain.lp.bz2  ns2122603rel.mps.bz2  ns2122603rel_kappaexplain.lp.bz2  ns2122603rel_kappaexplain.mps.bz2
model_analyzer/: __init__.py  analyzer.py  basic_analyzer.py  common.py  constraint_analyzer.py  file_analyzer.py  objective_function_analyzer.py  results_analyzer.py  variable_analyzer.py
src/: analyzer.py  common.py  constraint_analyzer.py  file_analyzer.py  objective_function_analyzer.py  variable_analyzer.py
src/gurobi_modelanalyzer/: __init__.py  analyzer.py  common.py  constraint_analyzer.py  file_analyzer.py  objective_function_analyzer.py  results_analyzer.py  solcheck.py  variable_analyzer.py
src/gurobi_modelanalyzer/scaling/: __init__.py  api.py  cli.py  methods.py  scaled_wrappers.py
tests/: test_analyzer.py  test_explainer.py  test_scaling.py  test_solcheck.py
tests/dataset/: Untitled1.ipynb  afiro.json  afiro.sol  glass4.mps  misc07.mps  misc07.sol
