[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gurobi-modelanalyzer"
description = "Model analysis tools for explaining ill-conditioning and analyzing solutions."
dynamic = ["version"]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["optimization"]
authors = [
  { name = "Gurobi Optimization, LLC", email = "support@gurobi.com" },
  { name = "Ed Klotz", email = "klotz@gurobi.com" },
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

requires-python = ">=3.10"
dependencies = [
  "gurobipy",
  "numpy",
  "scipy",
]

[project.urls]
Documentation = "https://gurobi-modelanalyzer.readthedocs.io/en/latest/"
Issues = "https://github.com/Gurobi/gurobi-modelanalyzer/issues"
Source = "https://github.com/Gurobi/gurobi-modelanalyzer"


[project.optional-dependencies]
interactive = [
  "questionary",
]


[dependency-groups]
dev = [
    "pytest>=8.1,<9",
    "ipykernel>=6.29.5",
    "matplotlib",
    "pre-commit",
    "pre-commit-uv",
    "tox",
    "tox-uv",
]
docs = [
    "gurobi-sphinxtheme",
    "ipykernel>=6.29.5",
    "nbsphinx>=0.9.7",
    "numpydoc>=1.9.0",
    "sphinx>=7.4.7",
    "sphinxcontrib.bibtex>=2.6.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.5",
    "sphinx-toolbox>=4.0.0",
]


[tool.hatch.version]
path = "src/gurobi_modelanalyzer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gurobi_modelanalyzer"]

[project.scripts]
gurobi_solcheck = "gurobi_modelanalyzer.solcheck:main_cli"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore  = ["E731", "F401"]

[tool.uv.sources]
gurobi-sphinxtheme = { git = "https://github.com/Gurobi/gurobi-sphinxtheme.git", rev = "main" }
